# qtest

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
docs/: Makefile  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/api/: assertions.rst  backends.rst  fixtures.rst  metrics.rst  noise.rst  qasm.rst  snapshot.rst  strategies.rst  viz.rst
docs/guides/: noise_testing.rst  property_testing.rst  pytest_integration.rst  snapshot_testing.rst  writing_assertions.rst
examples/: 01_basic_assertions.py  02_property_based_testing.py  03_pytest_plugin.py  04_testing_grover.py  05_testing_transpiler.py  06_noisy_testing.py  07_entanglement_and_backends.py  08_advanced_algorithms.py
examples/notebooks/: quickstart.ipynb
qtest/: __init__.py  _report.py  config.py  plugin.py  qasm.py  snapshot.py  viz.py
qtest/assertions/: __init__.py  _state_library.py  commutation.py  distribution.py  entanglement.py  equivalence.py  marginals.py  phase.py  resources.py  robustness.py  state.py  unitary.py
qtest/backends/: __init__.py  base.py  cirq_backend.py  pennylane_backend.py  qiskit_backend.py  registry.py
qtest/fixtures/: __init__.py  common_gates.py  common_states.py  noise.py
qtest/metrics/: __init__.py  distances.py  entanglement.py  statistical_tests.py
qtest/noise/: __init__.py  models.py  resolve.py
qtest/strategies/: __init__.py  circuits.py  gates.py  states.py
tests/: conftest.py  test_config.py  test_qasm.py  test_report.py  test_snapshot.py  test_viz.py
tests/assertions/: test_commutation.py  test_distribution.py  test_entanglement.py  test_equivalence.py  test_marginals.py  test_phase.py  test_resources.py  test_state.py  test_unitary.py
tests/backends/: test_cirq_backend.py  test_pennylane_backend.py  test_qiskit_backend.py  test_registry.py
tests/fixtures/: test_common_gates.py  test_common_states.py
tests/metrics/: test_distances.py  test_entanglement.py  test_statistical_tests.py
tests/noise/: test_backend.py  test_fixtures.py  test_integration.py  test_models.py  test_resolve.py
tests/plugin/: test_cli_flags.py  test_plugin_integration.py
tests/strategies/: test_circuits.py  test_gates.py  test_states.py
