# ============================================================================
#  qtest — pyproject.toml
#  Statistical, pytest-native testing for quantum circuits.
# ============================================================================

# ----------------------------------------------------------------------------
# 1. Build system (PEP 517/518) — hatchling
# ----------------------------------------------------------------------------
[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

# ----------------------------------------------------------------------------
# 2. Project metadata (PEP 621)
# ----------------------------------------------------------------------------
[project]
name = "qtest"
dynamic = ["version"]
description = "Statistical, pytest-native testing for quantum circuits."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Metin Tuncbilek", email = "tuncbilek.51metin@gmail.com" },
]
maintainers = [
    { name = "Metin Tuncbilek", email = "tuncbilek.51metin@gmail.com" },
]
keywords = [
    "quantum",
    "testing",
    "pytest",
    "qiskit",
    "quantum-computing",
    "quantum-software",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Framework :: Pytest",
    "Typing :: Typed",
]

# ----------------------------------------------------------------------------
# 3. Core dependencies
# ----------------------------------------------------------------------------
dependencies = [
    "qiskit>=1.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pytest>=7.0",
]

# ----------------------------------------------------------------------------
# 4. Optional dependency groups
# ----------------------------------------------------------------------------
[project.optional-dependencies]
hypothesis = [
    "hypothesis>=6.0",
]
aer = [
    "qiskit-aer>=0.13",
]
viz = [
    "matplotlib>=3.7",
]
dev = [
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pytest>=7.0",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.5",
    "pre-commit>=3.6",
    "tox>=4.11",
    "build>=1.0",
    "twine>=5.0",
    "hypothesis>=6.0",
    "qiskit-aer>=0.13",
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1",
    "sphinx-autobuild>=2024.2",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.5",
    "myst-parser>=2.0",
    "sphinxcontrib-bibtex>=2.6",
]
all = [
    "qtest[hypothesis,aer,viz,dev,docs]",
]

# ----------------------------------------------------------------------------
# 5. Project URLs
# ----------------------------------------------------------------------------
[project.urls]
Homepage      = "https://github.com/metin-5115/qtest"
Documentation = "https://qtest.readthedocs.io"
Repository    = "https://github.com/metin-5115/qtest"
Issues        = "https://github.com/metin-5115/qtest/issues"
Changelog     = "https://github.com/metin-5115/qtest/blob/main/CHANGELOG.md"

# ----------------------------------------------------------------------------
# 6. Pytest plugin entry-point (auto-discovered by pytest)
# ----------------------------------------------------------------------------
[project.entry-points.pytest11]
qtest = "qtest.plugin"

# ============================================================================
#  Tool configuration
# ============================================================================

# ----------------------------------------------------------------------------
# 7. Hatch — read version from qtest/__init__.py
# ----------------------------------------------------------------------------
[tool.hatch.version]
path = "qtest/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/qtest",
    "/tests",
    "/examples",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["qtest"]

# ----------------------------------------------------------------------------
# 8. Black
# ----------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | docs/_build
)/
'''

# ----------------------------------------------------------------------------
# 9. Ruff
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["docs/_build", "build", "dist", ".venv"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
]
ignore = [
    "E501",  # line length handled by black
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py"    = ["ARG", "N802", "N803"]
"examples/**/*.py" = ["ARG", "N802", "N803"]
"docs/conf.py"     = ["A001", "ARG"]

[tool.ruff.lint.isort]
known-first-party = ["qtest"]

# ----------------------------------------------------------------------------
# 10. Mypy
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
files = ["qtest"]

[[tool.mypy.overrides]]
module = [
    "qiskit.*",
    "qiskit_aer.*",
    "cirq.*",
    "pennylane.*",
    "scipy.*",
    "matplotlib.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

# ----------------------------------------------------------------------------
# 11. Pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: tests that take more than ~1s (deselect with -m 'not slow')",
    "hardware: tests that require real quantum hardware access",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    "--import-mode=importlib",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:qiskit.*",
    "ignore::PendingDeprecationWarning",
]

# ----------------------------------------------------------------------------
# 12. Coverage
# ----------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["qtest"]
omit = [
    "qtest/_version.py",
    "qtest/backends/cirq_backend.py",
    "qtest/backends/pennylane_backend.py",
    "tests/*",
]
parallel = true

[tool.coverage.paths]
source = ["qtest", "*/site-packages/qtest"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
